tests/paczka2/big_fuzzy/45248746.err
Error in line 8: 4TYRnz A964 17,1
Error in line 14: stbtwR6b1O A964 58,2
Error in line 32: 4TYRnz S564 48,0
Error in line 28: S869 S869 92,4
Error in line 25: jLtFYThHZE A964 59,1
Error in line 38: 4TYRnz A964 -2,9
Error in line 34: S869 S944 8,3
Error in line 39: S869 A964 87,7
Error in line 33: 4TYRnz A964 56,0
Error in line 44: ovDmKBp A964 48,7
Error in line 48: ovDmKBp S944 82,1
Error in line 50: ovDmKBp S944 87,55
Error in line 49: ovDmKBp S564 33,9
Error in line 66: jLtFYThHZE A964 79,7
Error in line 68: jLtFYThHZE S564 34,9
Error in line 67: 4TYRnz S869 42,9
Error in line 90: jLtFYThHZE S564 84,3
Error in line 93: jLtFYThHZE S944 54,3
Error in line 99: ovDmKBp A964 -2,9
Error in line 102: ovDmKBp A94 20,9
Error in line 97: S869 S944 55,1
Error in line 123: Cfin S944 -3,3
Error in line 115: Cfin S944 67,0
Error in line 130: stbtwR6b1O S564 61,1
Error in line 120: ovDmKBp A964 22,6
Error in line 151: Cfin Sz64 24,8
Error in line 152: jLtFYThHZE S564 42,8
Error in line 153: 4TYRnz A964 15,1
Error in line 169: S869 S869 92,3
Error in line 184: stbtwR6b1O S564 74,0
Error in line 188: 4TYRnz S869 25,7
Error in line 193: jLtFYThHZE A964 76,5
Error in line 200: jLtFYThHZE A964 94,3
Error in line 195: 4TYRnz S944 70,7
Error in line 227: stbtwR6b1O S869 82,6
Error in line 214: ovDmKBp A964 20,9
Error in line 225: Cfin S564 32,8
